--- a/projects/icc/layout/src/layout-horizontal.component.scss
+++ b/projects/icc/layout/src/layout-horizontal.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   flex: 1 1 auto;
-  overflow-x: hidden;
+  overflow: hidden;
 
   ::ng-deep {
     icc-layout-left {
