--- a/projects/icc/layout/src/layout.component.scss
+++ b/projects/icc/layout/src/layout.component.scss
@@ -3,6 +3,7 @@
   position: relative; // for resize handle position
   flex-direction: column;
   width: 100%;
+  //border: 1px solid cyan; // No border here
 
   ::ng-deep {
     icc-layout-header {
@@ -18,7 +19,7 @@
       justify-content: center;
       align-items: center;
       flex-flow: row wrap;
-      //border: 1px solid blue;
+      border: 1px solid blue;
     }
   }
 }
