--- a/projects/icc/layout/src/layout-horizontal.component.scss
+++ b/projects/icc/layout/src/layout-horizontal.component.scss
@@ -6,6 +6,7 @@
 
   ::ng-deep {
     icc-layout-left {
+      display: flex;
       position: relative;
       z-index: 1;
       min-width: 100px;
@@ -22,6 +23,7 @@
     }
 
     icc-layout-right {
+      display: flex;
       position: relative;
       z-index: 1;
       width: 250px;
