--- a/projects/icc/accordion/src/accordion.component.scss
+++ b/projects/icc/accordion/src/accordion.component.scss
@@ -10,7 +10,6 @@
 
     cdk-accordion-item {
       display: flex;
-      //flex: 1;
       flex-direction: column;
       height: -webkit-fill-available;
       position: relative;
@@ -20,13 +19,12 @@
         display: flex;
         align-content: center;
         justify-content: space-between;
-        padding: 8px 10px;
+        padding: 4px 10px;
       }
 
-      /*
       ::ng-deep icc-menu-item {
-        padding: 4px 0;
-      }*/
+        padding: 4px 0 4px 10px;
+      }
     }
   }
 
@@ -36,9 +34,5 @@
 
   .cdk-accordion-item + .cdk-accordion-item {
     border-top: none;
-  }
-
-  ::ng-deep icc-menu-item {
-    padding-left: 10px;
   }
 }
