--- a/projects/icc/grid/src/_grid.component.theme.scss
+++ b/projects/icc/grid/src/_grid.component.theme.scss
@@ -6,7 +6,8 @@
       background-color: icc-theme(icc-grid-toolbar-background-color);
     }
 
-    icc-grid-header {
+    icc-grid-header,
+    icc-grid-header-view {
       background-color: icc-theme(icc-grid-header-background-color);
     }
 
