d3 zoom dashboard drag

--- a/projects/icc/dashboard/src/dashboard.component.html
+++ b/projects/icc/dashboard/src/dashboard.component.html
@@ -22,7 +22,7 @@
         <div
           class="icc-drag-tile"
           [style.backgroundColor]="tile.color"
-          (mousedown)="onMousedown($event, tile)"
+          (dblclick)="onDblClick($event, tile)"
           cdkDrag
           [cdkDragDisabled]="isDragDisabled(tile)"
           [cdkDragData]="i"
