layout resize line

--- a/projects/icc-demo/src/app/views/layout/layout.component.scss
+++ b/projects/icc-demo/src/app/views/layout/layout.component.scss
@@ -1,4 +1,15 @@
 :host {
   display: flex;
   flex: 1;
+
+  ::ng-deep {
+    icc-layout-left,
+    icc-layout-center,
+    icc-layout-right,
+    icc-layout-top,
+    icc-layout-middle,
+    icc-layout-bottom {
+      border: 1px solid darkgreen;
+    }
+  }
 }
