--- a/projects/icc/layout/src/layout-vertical.component.html
+++ b/projects/icc/layout/src/layout-vertical.component.html
@@ -7,7 +7,7 @@
 
 <ng-template #tplResizeTopBottom>
   <div
-    class="icc-content-resize-top"
+    class="icc-vertical-resize-top"
     IccResizeTopBottom
     iccResize
     [direction]="resizeType.TOP_BOTTOM"
@@ -18,7 +18,7 @@
 
 <ng-template #tplResizeBottomTop>
   <div
-    class="icc-content-resize-bottom"
+    class="icc-vertical-resize-bottom"
     IccResizeBottomTop
     iccResize
     [direction]="resizeType.BOTTOM_TOP"
