--- a/projects/icc/layout/src/layout.component.html
+++ b/projects/icc/layout/src/layout.component.html
@@ -4,6 +4,7 @@
 
 <div
   *ngIf="resizeable"
+  class="icc-layout-resize-right"
   IccResizeRight
   iccResize
   [direction]="resizeType.RIGHT"
@@ -12,6 +13,7 @@
 ></div>
 <div
   *ngIf="resizeable"
+  class="icc-layout-resize-bottom"
   IccResizeBottom
   iccResize
   [direction]="resizeType.BOTTOM"
