--- a/projects/icc/layout/src/layout-horizontal.component.scss
+++ b/projects/icc/layout/src/layout-horizontal.component.scss
@@ -11,14 +11,12 @@
       z-index: 1;
       min-width: 100px;
       width: 250px;
-      border: 1px solid red;
       height: -webkit-fill-available;
     }
 
     icc-layout-center {
       display: flex;
       flex: 1 1 auto;
-      border: 1px solid orange;
       height: -webkit-fill-available;
     }
 
@@ -28,22 +26,20 @@
       z-index: 1;
       width: 250px;
       min-width: 100px;
-      border: 1px solid blue;
       height: -webkit-fill-available;
     }
   }
 
-  .icc-content-resize-left,
-  .icc-content-resize-right {
-    // cursor: col-resize;
+  .icc-horizontal-resize-left,
+  .icc-horizontal-resize-right {
     height: 100%;
   }
 
-  .icc-content-resize-left {
+  .icc-horizontal-resize-left {
     padding-right: 5px;
   }
 
-  .icc-content-resize-right {
+  .icc-horizontal-resize-right {
     padding-left: 5px;
   }
 }
