--- a/projects/icc/layout/src/layout-vertical.component.scss
+++ b/projects/icc/layout/src/layout-vertical.component.scss
@@ -10,7 +10,7 @@
     icc-layout-top {
       position: relative;
       z-index: 1;
-      min-height: 50px;
+      //min-height: 50px;
       height: 150px;
     }
 
@@ -23,7 +23,7 @@
     icc-layout-bottom {
       position: relative;
       z-index: 1;
-      min-height: 50px;
+      //min-height: 50px;
       height: 150px;
     }
   }
