--- a/projects/icc/layout/src/layout-horizontal.component.scss
+++ b/projects/icc/layout/src/layout-horizontal.component.scss
@@ -9,7 +9,7 @@
       display: flex;
       position: relative;
       z-index: 1;
-      //min-width: 100px;
+      min-width: 10px;
       width: 250px;
       height: -webkit-fill-available;
     }
@@ -17,6 +17,7 @@
     icc-layout-center {
       display: flex;
       flex: 1 1 auto;
+      min-width: 10px;
       height: -webkit-fill-available;
     }
 
@@ -25,7 +26,7 @@
       position: relative;
       z-index: 1;
       width: 250px;
-      //min-width: 100px;
+      min-width: 10px;
       height: -webkit-fill-available;
     }
   }
