--- a/projects/icc/dashboard/src/dashboard.component.scss
+++ b/projects/icc/dashboard/src/dashboard.component.scss
@@ -1,6 +1,7 @@
 :host {
   width: 100%;
   padding-right: 10px;
+  border: 1px solid green;
 
   .icc-dashboard {
     position: relative; // for menu right position
