--- a/projects/icc/layout/src/layout.component.scss
+++ b/projects/icc/layout/src/layout.component.scss
@@ -21,4 +21,12 @@
       flex-flow: row wrap;
     }
   }
+
+  [IccResizeRight] {
+    top: 0px;
+  }
+
+  [IccResizeBottom] {
+    left: 0px;
+  }
 }
