--- a/projects/icc/layout/src/_layout.component.theme.scss
+++ b/projects/icc/layout/src/_layout.component.theme.scss
@@ -1,13 +1,13 @@
 @mixin icc-layout-theme() {
   .icc-main-viewport-layout {
     icc-layout-header {
-      height: 50px;
+      height: 36px;
     }
     icc-layout-horizontal {
-      height: calc(100vh - 80px);
+      height: calc(100vh - 60px);
     }
     icc-layout-footer {
-      height: 30px;
+      height: 24px;
     }
   }
 
@@ -34,6 +34,7 @@
   .icc-layout-resize-right,
   .icc-horizontal-resize-left,
   .icc-horizontal-resize-right {
+    height: 100%;
     min-width: 2px;
     &:focus,
     &:hover {
@@ -45,6 +46,7 @@
   .icc-vertical-resize-top,
   .icc-vertical-resize-bottom {
     min-height: 2px;
+    width: 100%;
     &:focus,
     &:hover {
       border-bottom: 2px solid red;
