--- a/projects/icc/button/src/_button.component.theme.scss
+++ b/projects/icc/button/src/_button.component.theme.scss
@@ -3,6 +3,7 @@
     font-size: 0.6875rem;
     font-weight: 500;
     line-height: 28px;
+    padding-block: 0px;
     color: icc-theme(app-text-basic-color);
 
     &.status-default {
