--- a/projects/icc/dashboard/src/dashboard.component.scss
+++ b/projects/icc/dashboard/src/dashboard.component.scss
@@ -1,7 +1,6 @@
 :host {
   width: 100%;
-  padding-right: 10px;
-  border: 1px solid green;
+  //padding-right: 10px;
 
   .icc-dashboard {
     position: relative; // for menu right position
@@ -21,7 +20,6 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    border: 1px solid green;
   }
 
   .icc-drag-tile {
