dashboard layout with topbar

--- a/projects/icc/dashboard/src/_dashboard.component.theme.scss
+++ b/projects/icc/dashboard/src/_dashboard.component.theme.scss
@@ -3,4 +3,8 @@
   .icc-tile-item {
     border: solid 1px icc-theme(app-border-basic-color);
   }
+
+  icc-layout-header {
+    background-color: icc-theme(icc-panel-top-bar-background-color);
+  }
 }
