--- a/projects/icc/layout/src/layout.component.scss
+++ b/projects/icc/layout/src/layout.component.scss
@@ -11,6 +11,7 @@
       flex-direction: row;
       justify-content: center;
       align-items: center;
+      padding: 0 5px;
     }
 
     icc-layout-footer {
