--- a/projects/icc/dashboard/src/dashboard.component.scss
+++ b/projects/icc/dashboard/src/dashboard.component.scss
@@ -4,6 +4,10 @@
   height: 100%;
   padding: 0 5px;
 
+  icc-layout {
+    display: block;
+  }
+
   .icc-layout-top-bar-title {
     display: flex;
     margin-right: auto;
