--- a/projects/icc/file-upload/src/file-select-upload.component.html
+++ b/projects/icc/file-upload/src/file-select-upload.component.html
@@ -1,6 +1,6 @@
-<icc-panel>
-  <icc-panel-top-bar *ngIf="uploadFiles$ | async as uploadFiles">
-    <div class="icc-panel-top-bar-title">{{ "ICC.UI.FILE_UPLOAD.FILE_SELECT_UPLOAD" | translate }}</div>
+<icc-layout>
+  <icc-layout-header *ngIf="uploadFiles$ | async as uploadFiles">
+    <div class="icc-layout-top-bar-title">{{ "ICC.UI.FILE_UPLOAD.FILE_SELECT_UPLOAD" | translate }}</div>
     <icc-checkbox [checked]="checked" (change)="onChange($event)">{{
       "ICC.UI.ACTIONS.ENABLED" | translate
     }}</icc-checkbox>
@@ -10,7 +10,7 @@
         {{ button.title | translate }}
       </button>
     </ng-container>
-  </icc-panel-top-bar>
+  </icc-layout-header>
 
   <div class="icc-file-select-files">
     <ng-container *ngFor="let fieldConfig of fieldConfigs">
@@ -20,4 +20,4 @@
   </div>
 
   <icc-file-upload-grid> </icc-file-upload-grid>
-</icc-panel>
+</icc-layout>
