--- a/projects/icc/layout/src/_layout.component.theme.scss
+++ b/projects/icc/layout/src/_layout.component.theme.scss
@@ -16,6 +16,7 @@
     icc-layout-header {
       height: 30px;
       margin-bottom: 2px;
+      justify-content: flex-end;
     }
     icc-layout-horizontal {
       height: unset;
