--- a/projects/icc/form/src/form.component.html
+++ b/projects/icc/form/src/form.component.html
@@ -1,4 +1,4 @@
-<icc-panel *ngIf="formConfig$ | async as formConfig">
+<icc-layout *ngIf="formConfig$ | async as formConfig">
   <ng-container *ngIf="formFieldsConfig$ | async as formFields">
     <ng-container *ngIf="formData$ | async as formData">
       <icc-form-view
@@ -10,4 +10,4 @@
       </icc-form-view>
     </ng-container>
   </ng-container>
-</icc-panel>
+</icc-layout>
