--- a/projects/icc/tree/src/tree.component.html
+++ b/projects/icc/tree/src/tree.component.html
@@ -1,6 +1,6 @@
-<ng-container *ngIf="treeConfig$ | async as treeConfig">
+<icc-layout *ngIf="treeConfig$ | async as treeConfig">
   <ng-container *ngIf="columnsConfig$ | async as columns">
-    <div class="icc-grid-toolbar" *ngIf="!treeConfig.hideTopbar">
+    <icc-layout-header *ngIf="!treeConfig.hideTopbar">
       <button icc-button (click)="refresh(treeConfig)">
         <icc-icon [icon]="buttons[0].icon!"></icc-icon>
         {{ buttons[0].title | translate }}
@@ -19,7 +19,7 @@
         <icc-icon [icon]="buttons[1].icon!"></icc-icon>
         {{ "Collapse All" | translate }}
       </button>
-    </div>
+    </icc-layout-header>
 
     <icc-tree-view [treeConfig]="treeConfig" [columns]="columns"> </icc-tree-view>
 
@@ -27,4 +27,4 @@
     <icc-grid-footer [treeConfig]="treeConfig" *ngIf="!treeConfig.hideGridFooter"> </icc-grid-footer>
         -->
   </ng-container>
-</ng-container>
+</icc-layout>
