--- a/projects/icc/file-upload/src/file-select-upload.component.html
+++ b/projects/icc/file-upload/src/file-select-upload.component.html
@@ -1,15 +1,12 @@
-<icc-layout>
-  <icc-layout-header *ngIf="uploadFiles$ | async as uploadFiles">
-    <div class="icc-layout-top-bar-title">{{ "ICC.UI.FILE_UPLOAD.FILE_SELECT_UPLOAD" | translate }}</div>
+<icc-layout *ngIf="uploadFiles$ | async as uploadFiles">
+  <icc-layout-header
+    title="ICC.UI.FILE_UPLOAD.FILE_SELECT_UPLOAD"
+    [buttons]="buttons"
+    (iccButtonClick)="buttonClick($event)"
+  >
     <icc-checkbox [checked]="checked" (change)="onChange($event)">{{
       "ICC.UI.ACTIONS.ENABLED" | translate
     }}</icc-checkbox>
-    <ng-container *ngFor="let button of buttons">
-      <button icc-button [disabled]="buttonVisible(uploadFiles)" (click)="buttonClick(button)">
-        <icc-icon *ngIf="button.icon" [icon]="button.icon"></icc-icon>
-        {{ button.title | translate }}
-      </button>
-    </ng-container>
   </icc-layout-header>
 
   <div class="icc-file-select-files">
