--- a/projects/icc/layout/src/layout-header.component.html
+++ b/projects/icc/layout/src/layout-header.component.html
@@ -1,1 +1,9 @@
+<div *ngIf="title" class="icc-layout-top-bar-title">{{ title | translate }}</div>
 <ng-content></ng-content>
+
+<ng-container *ngFor="let button of buttons">
+  <button icc-button [disabled]="button.disabled" (click)="buttonClick(button)">
+    <icc-icon *ngIf="button.icon" [icon]="button.icon"></icc-icon>
+    {{ button.title | translate }}
+  </button>
+</ng-container>
