--- a/projects/icc/file-upload/src/file-drop-upload.component.html
+++ b/projects/icc/file-upload/src/file-drop-upload.component.html
@@ -1,4 +1,6 @@
-<icc-layout>
+<icc-layout *ngIf="uploadFiles$ | async as uploadFiles">
+  <!--
+
   <icc-layout-header *ngIf="uploadFiles$ | async as uploadFiles">
     <div class="icc-layout-top-bar-title">{{ "ICC.UI.FILE_UPLOAD.FILE_DROP_UPLOAD" | translate }}</div>
     <icc-checkbox [checked]="checked" (change)="onChange($event)">{{
@@ -10,6 +12,17 @@
         {{ button.title | translate }}
       </button>
     </ng-container>
+  </icc-layout-header>
+    -->
+
+  <icc-layout-header
+    title="ICC.UI.FILE_UPLOAD.FILE_DROP_UPLOAD"
+    [buttons]="buttons"
+    (iccButtonClick)="buttonClick($event)"
+  >
+    <icc-checkbox [checked]="checked" (change)="onChange($event)">{{
+      "ICC.UI.ACTIONS.ENABLED" | translate
+    }}</icc-checkbox>
   </icc-layout-header>
 
   <icc-file-drop
