--- a/projects/icc/grid/src/grid.component.html
+++ b/projects/icc/grid/src/grid.component.html
@@ -1,14 +1,10 @@
 <icc-layout *ngIf="gridConfig$ | async as gridConfig">
   <ng-container *ngIf="columnsConfig$ | async as columns">
-    <icc-layout-header *ngIf="!gridConfig.hideTopbar">
-      <button icc-button (click)="refresh(gridConfig)">
-        <icc-icon [icon]="buttons[0].icon!"></icc-icon>
-        {{ buttons[0].title | translate }}
-      </button>
-      <button icc-button (click)="clearFilters()">
-        <icc-icon [icon]="buttons[1].icon!"></icc-icon>
-        {{ buttons[1].title | translate }}
-      </button>
+    <icc-layout-header
+      *ngIf="!gridConfig.hideTopbar"
+      [buttons]="buttons"
+      (iccButtonClick)="buttonClick($event, gridConfig)"
+    >
     </icc-layout-header>
 
     <icc-grid-view [gridConfig]="gridConfig" [columns]="columns"> </icc-grid-view>
