use layout header

--- a/projects/icc/layout/src/layout.component.scss
+++ b/projects/icc/layout/src/layout.component.scss
@@ -7,7 +7,7 @@
 
   ::ng-deep {
     icc-layout-footer {
-      display: flex;
+      display: block;
       z-index: 2;
       justify-content: center;
       align-items: center;
