--- a/projects/icc/grid/src/components/grid-footer/grid-footer.component.scss
+++ b/projects/icc/grid/src/components/grid-footer/grid-footer.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: left;
   align-items: center;
-  padding: 0 10px;
+  padding: 1px 10px;
 
   button {
     margin-right: 5px;
