--- a/projects/icc/layout/src/_layout.component.theme.scss
+++ b/projects/icc/layout/src/_layout.component.theme.scss
@@ -14,7 +14,7 @@
 
   .icc-normal-layout {
     icc-layout-header {
-      height: 30px;
+      height: 30px; // defined in the constant
       margin-bottom: 2px;
       justify-content: flex-end;
     }
