--- a/projects/icc-demo/src/app/app.component.scss
+++ b/projects/icc-demo/src/app/app.component.scss
@@ -1,6 +1,10 @@
 :host {
   display: flex;
 
+  icc-layout-footer {
+    border: 1px solid red;
+  }
+
   icc-select-field {
     width: 150px;
   }
