--- a/projects/icc/accordion/src/accordion.component.html
+++ b/projects/icc/accordion/src/accordion.component.html
@@ -1,27 +1,12 @@
-<cdk-accordion>
-  @for (item of items; track item; let index = $index) {
-    <cdk-accordion-item
-      [expanded]="isExpaneded(index)"
-      #accordionItem="cdkAccordionItem"
-      class="icc-accordion-item"
-      role="button"
-      [tabindex]="index"
-      [attr.id]="'accordion-header-' + index"
-      [attr.aria-expanded]="accordionItem.expanded"
-      [attr.aria-controls]="'accordion-body-' + index"
-      [ngStyle]="{ 'overflow-y': isExpaneded(index) ? 'auto' : 'hidden' }"
-    >
-      <div
-        class="icc-accordion-item-header"
-        [ngClass]="{ expanded: accordionItem.expanded }"
-        (click)="accordionItem.toggle()"
-      >
-        {{ getTitle(item) }}
-        <i *ngIf="accordionItem.expanded" class="fa-solid fa-chevron-up"></i>
-        <i *ngIf="!accordionItem.expanded" class="fa-solid fa-chevron-down"></i>
-      </div>
+@for (item of items; track item; let index = $index) {
+  <icc-layout [ngStyle]="{ flex: getLayoutFlex(item) }">
+    <icc-layout-header [title]="getTitle(item)" (click)="toggle(item, !!item.expanded)">
+      <i *ngIf="item.expanded" class="fa-solid fa-chevron-up"></i>
+      <i *ngIf="!item.expanded" class="fa-solid fa-chevron-down"></i>
+    </icc-layout-header>
 
-      <icc-menus *ngIf="accordionItem.expanded" [items]="item.items"></icc-menus>
-    </cdk-accordion-item>
-  }
-</cdk-accordion>
+    <icc-layout-horizontal *ngIf="item?.expanded">
+      <icc-menus [items]="item.items"></icc-menus>
+    </icc-layout-horizontal>
+  </icc-layout>
+}
