--- a/projects/icc/accordion/src/accordion.component.html
+++ b/projects/icc/accordion/src/accordion.component.html
@@ -1,5 +1,5 @@
 @for (item of items; track item; let index = $index) {
-  <icc-layout [ngStyle]="{ flex: getLayoutFlex(item) }">
+  <icc-layout [ngStyle]="{ flex: getHeaderStyle(item) }">
     <icc-layout-header [title]="getTitle(item)" (click)="toggle(item, !!item.expanded)">
       <i *ngIf="item.expanded" class="fa-solid fa-chevron-up"></i>
       <i *ngIf="!item.expanded" class="fa-solid fa-chevron-down"></i>
