--- a/projects/icc/accordion/src/_accordion.component.theme.scss
+++ b/projects/icc/accordion/src/_accordion.component.theme.scss
@@ -1,17 +1,16 @@
 @mixin icc-accordion-theme() {
   icc-accordion {
-    .icc-accordion-item-header {
-      background-color: icc-theme(icc-accordion-item-background-color);
-      color: icc-theme(app-text-basic-color);
+    icc-layout-header {
+      border-bottom: 1px solid blueviolet;
       &:focus,
       &:hover {
         background-color: icc-theme(icc-accordion-item-hover-background-color);
       }
+    }
 
-      &.expanded {
-        background-color: icc-theme(icc-accordion-item-expanded-background-color);
-        font-weight: bold;
-      }
+    .icc-accordion-item-expanded {
+      background-color: icc-theme(icc-accordion-item-expanded-background-color);
+      font-weight: bold;
     }
   }
 }
