--- a/projects/icc/accordion/src/accordion.component.scss
+++ b/projects/icc/accordion/src/accordion.component.scss
@@ -1,13 +1,12 @@
 :host {
   display: flex;
   flex-direction: column;
-  width: 250px;
+  width: 100%;
   padding: 5px;
   overflow-y: hidden;
 
   icc-layout-header {
     margin-bottom: 0px;
-    border-bottom: 1px solid blueviolet;
   }
 
   icc-layout-horizontal {
