--- a/projects/icc/layout/src/layout-header.component.html
+++ b/projects/icc/layout/src/layout-header.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="title !== undefined" class="icc-layout-top-bar-title">{{ title | translate }}</div>
+<div *ngIf="title !== undefined" class="icc-layout-header-title">{{ title | translate }}</div>
 
 <ng-content></ng-content>
 
