--- a/projects/icc/theme/src/themes/_dark.scss
+++ b/projects/icc/theme/src/themes/_dark.scss
@@ -3,15 +3,15 @@ $theme: (
   app-border-basic-color: #4b4f54,
   app-text-basic-color: #adadad,
 
+  //header and footer
+  icc-header-background-color: #404040,
+
   //grid
   icc-grid-header-background-color: #242424,
   icc-grid-row-odd-background-color: #1f1f1f,
   icc-grid-row-even-background-color: #282828,
   icc-grid-row-hover-background-color: #353535,
   icc-grid-toolbar-background-color: #404040,
-
-  //panel
-  icc-panel-top-bar-background-color: #404040,
 
   //button
   icc-button-default-color: #4b4f54,
