--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -3,15 +3,15 @@ $theme: (
   app-border-basic-color: #d0c6bc,
   app-text-basic-color: #4b4f54,
 
+  //header and footer
+  icc-header-background-color: #d2d2d2,
+
   //grid
   icc-grid-header-background-color: #ededed,
   icc-grid-row-odd-background-color: #ffffff,
   icc-grid-row-even-background-color: #f4f5f5,
   icc-grid-row-hover-background-color: #e5e5e5,
   icc-grid-toolbar-background-color: #d2d2d2,
-
-  //panel
-  icc-panel-top-bar-background-color: #d2d2d2,
 
   //button
   icc-button-default-color: #ffffff,
